--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "immer": "^10.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
